--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,13 @@
     "name": "sylius/payment",
     "type": "library",
     "description": "Flexible payments system for PHP e-commerce applications.",
-    "keywords": ["payments", "payment", "shop", "webshop", "ecommerce"],
+    "keywords": [
+        "payments",
+        "payment",
+        "shop",
+        "webshop",
+        "ecommerce"
+    ],
     "homepage": "https://sylius.com",
     "license": "MIT",
     "authors": [
@@ -21,9 +27,8 @@
     ],
     "require": {
         "php": "^7.3",
-
-        "sylius/registry": "^1.4",
-        "sylius/resource": "^1.0"
+        "sylius/registry": "^1.5",
+        "sylius/resource": "^1.6"
     },
     "require-dev": {
         "phpspec/phpspec": "^6.1"
@@ -31,23 +36,27 @@
     "config": {
         "bin-dir": "bin"
     },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "1.6-dev"
+        }
+    },
     "autoload": {
-        "psr-4": { "Sylius\\Component\\Payment\\": "" }
+        "psr-4": {
+            "Sylius\\Component\\Payment\\": ""
+        }
     },
     "autoload-dev": {
-        "psr-4": { "Sylius\\Component\\Payment\\spec\\": "spec/" }
+        "psr-4": {
+            "Sylius\\Component\\Payment\\spec\\": "spec/"
+        }
     },
-    "minimum-stability": "dev",
-    "prefer-stable": true,
     "repositories": [
         {
             "type": "path",
             "url": "../../*/*"
         }
     ],
-    "extra": {
-        "branch-alias": {
-            "dev-master": "1.6-dev"
-        }
-    }
+    "minimum-stability": "dev",
+    "prefer-stable": true
 }
